started location feature handling

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# import preprocessing packages \n",
-    "import numpy as pd\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "Text(0.5, 1.0, 'College Bins')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "Text(0.5, 1.0, 'Legacy Bins')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "Text(0.5, 1.0, 'P_M Bins')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "Text(0.5, 1.0, 'Merit Bins')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
        "Text(0.5, 1.0, 'Jesuit Bins')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "Text(0.5, 1.0, 'Religion Bins')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
        "Text(0.5, 1.0, 'Ethnicity Bins')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
        "Text(0.5, 1.0, 'First Generation Bins')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "Text(0.5, 1.0, 'Citizen Bins')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -900,15 +900,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1440x720 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -921,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -940,11 +931,319 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Handling Location Features "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HSCity</th>\n",
+       "      <th>HST</th>\n",
+       "      <th>MAJOR_CODE</th>\n",
+       "      <th>Major Description</th>\n",
+       "      <th>RGPA</th>\n",
+       "      <th>RES</th>\n",
+       "      <th>Active City</th>\n",
+       "      <th>Active Region</th>\n",
+       "      <th>Active Postal</th>\n",
+       "      <th>Active Country</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RESIDENT_CODE</th>\n",
+       "      <th>College_Bins</th>\n",
+       "      <th>Legacy_Bins</th>\n",
+       "      <th>PM_Bins</th>\n",
+       "      <th>Merit_Bins</th>\n",
+       "      <th>Jesuit_Bins</th>\n",
+       "      <th>Religion_Bins</th>\n",
+       "      <th>Ethnicity_Bins</th>\n",
+       "      <th>First_GEN_Bins</th>\n",
+       "      <th>Citizen_Bins</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>North Eastham</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>Business Undeclared</td>\n",
+       "      <td>Business Undeclared</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>R</td>\n",
+       "      <td>South Yarmouth</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>02664-5229</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bridgeport</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>2.52</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Bridgeport</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>06606-4225</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Newark</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>R</td>\n",
+       "      <td>Newark</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>07108-1513</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Undeclared</td>\n",
+       "      <td>Undeclared</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>R</td>\n",
+       "      <td>Middle Vlg</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>11379-1960</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Danbury</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>Management</td>\n",
+       "      <td>Management</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Danbury</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>06810-6735</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          HSCity HST           MAJOR_CODE    Major Description  RGPA RES  \\\n",
+       "0  North Eastham  MA  Business Undeclared  Business Undeclared  2.15   R   \n",
+       "1     Bridgeport  CT            Marketing            Marketing  2.52   C   \n",
+       "2         Newark  NJ            Marketing            Marketing  1.24   R   \n",
+       "3       New York  NY           Undeclared           Undeclared  1.90   R   \n",
+       "4        Danbury  CT           Management           Management   NaN   C   \n",
+       "\n",
+       "      Active City Active Region Active Postal Active Country      ...       \\\n",
+       "0  South Yarmouth            MA    02664-5229  United States      ...        \n",
+       "1      Bridgeport            CT    06606-4225  United States      ...        \n",
+       "2          Newark            NJ    07108-1513  United States      ...        \n",
+       "3      Middle Vlg            NY    11379-1960  United States      ...        \n",
+       "4         Danbury            CT    06810-6735  United States      ...        \n",
+       "\n",
+       "  RESIDENT_CODE College_Bins  Legacy_Bins  PM_Bins  Merit_Bins  Jesuit_Bins  \\\n",
+       "0           NaN            1            2        2           2            2   \n",
+       "1           NaN            1            2        2           2            2   \n",
+       "2           NaN            1            2        2           2            2   \n",
+       "3           NaN            2            2        2           2            2   \n",
+       "4           NaN            1            2        2           2            2   \n",
+       "\n",
+       "   Religion_Bins  Ethnicity_Bins  First_GEN_Bins  Citizen_Bins  \n",
+       "0              2               2               1             1  \n",
+       "1              2               2               1             1  \n",
+       "2              2               2               2             1  \n",
+       "3              2               1               2             1  \n",
+       "4              2               2               1             1  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop rows where HSCity was missing > this was a low impact feature because not many were missing\n",
+    "# also dropped the one row that was missing MAJOR_CODE\n",
+    "df = df.dropna(axis=0, how='any', subset=['HSCity', 'MAJOR_CODE'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 54216 entries, 0 to 54378\n",
+      "Data columns (total 21 columns):\n",
+      "HSCity               54216 non-null object\n",
+      "HST                  52916 non-null object\n",
+      "MAJOR_CODE           54216 non-null object\n",
+      "Major Description    33480 non-null object\n",
+      "RGPA                 41224 non-null float64\n",
+      "RES                  44281 non-null object\n",
+      "Active City          44274 non-null object\n",
+      "Active Region        53464 non-null object\n",
+      "Active Postal        43987 non-null object\n",
+      "Active Country       44274 non-null object\n",
+      "DEGREE_TYPE          9934 non-null object\n",
+      "RESIDENT_CODE        9934 non-null object\n",
+      "College_Bins         54216 non-null int64\n",
+      "Legacy_Bins          54216 non-null int64\n",
+      "PM_Bins              54216 non-null int64\n",
+      "Merit_Bins           54216 non-null int64\n",
+      "Jesuit_Bins          54216 non-null int64\n",
+      "Religion_Bins        54216 non-null int64\n",
+      "Ethnicity_Bins       54216 non-null int64\n",
+      "First_GEN_Bins       54216 non-null int64\n",
+      "Citizen_Bins         54216 non-null int64\n",
+      "dtypes: float64(1), int64(9), object(11)\n",
+      "memory usage: 9.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['HSCity'] [HSCity                   0\n",
+      "HST                   1300\n",
+      "MAJOR_CODE               1\n",
+      "Major Description    20737\n",
+      "RGPA                 12993\n",
+      "RES                   9936\n",
+      "Active City           9943\n",
+      "Active Region          752\n",
+      "Active Postal        10230\n",
+      "Active Country        9943\n",
+      "DEGREE_TYPE          44283\n",
+      "RESIDENT_CODE        44282\n",
+      "College_Bins             0\n",
+      "Legacy_Bins              0\n",
+      "PM_Bins                  0\n",
+      "Merit_Bins               0\n",
+      "Jesuit_Bins              0\n",
+      "Religion_Bins            0\n",
+      "Ethnicity_Bins           0\n",
+      "First_GEN_Bins           0\n",
+      "Citizen_Bins             0\n",
+      "dtype: int64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count how many missing values each feature in the main dataframe has \n",
+    "names = []\n",
+    "val = []\n",
+    "\n",
+    "for col in df.columns:\n",
+    "    names.append(col)\n",
+    "    val.append(df[df.columns].isnull().sum())\n",
+    "    break\n",
+    "# print out results as (column_name, # of null values in column_name)\n",
+    "print(names, val)"
+   ]
   },
   {
    "cell_type": "code",
