--- a/admissions_master.ipynb
+++ b/admissions_master.ipynb
@@ -244,9 +244,9 @@
       "text/plain": [
        "Index(['ID', 'Active Region', 'ADMIT_TYPE', 'ADMT_DESC', 'DEC', 'APP_DESC',\n",
        "       'COMP', 'APP_ENTRY_TERM', 'College Code', 'College', 'DEGREE_TYPE',\n",
-       "       'MAJOR_CODE', 'Major', 'RESIDENT_CODE', 'ACCP', 'CONF', 'ENROLL',\n",
-       "       'JESUIT', 'HSCity', 'HST', 'HSNATION', 'Sex', 'RELIGION', 'APPLIED',\n",
-       "       'First_GEN', 'ACT', 'SAT Reading USE', 'SAT Math USE', 'SAT Total USE',\n",
+       "       'MAJOR_CODE', 'Major', 'RES', 'ACCP', 'CONF', 'ENROLL', 'JESUIT',\n",
+       "       'HSCity', 'HST', 'HSNATION', 'Sex', 'RELIGION', 'APPLIED', 'First_GEN',\n",
+       "       'ACT', 'SAT Reading USE', 'SAT Math USE', 'SAT Total USE',\n",
        "       'SAT Math OLD', 'SAT Verbal OLD', 'SAT WRI OLD', 'Sum Ver & Wri',\n",
        "       'Total SAT OLD', 'Class Percentile', 'Citizen', 'Legacy', 'Ethnicity',\n",
        "       'Test Optional'],\n",
@@ -287,7 +287,7 @@
       "DEGREE_TYPE         9977 non-null object\n",
       "MAJOR_CODE          9977 non-null object\n",
       "Major               9977 non-null object\n",
-      "RESIDENT_CODE       9977 non-null object\n",
+      "RES                 9977 non-null object\n",
       "ACCP                7137 non-null object\n",
       "CONF                1056 non-null object\n",
       "ENROLL              0 non-null float64\n",
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1679,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1971,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2130,7 +2130,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 54378 entries, 0 to 9976\n",
-      "Data columns (total 58 columns):\n",
+      "Data columns (total 57 columns):\n",
       "ID                                   54378 non-null int64\n",
       "Accept                               20440 non-null object\n",
       "HSCity                               54216 non-null object\n",
@@ -2151,7 +2151,7 @@
       "CONF                                 5174 non-null object\n",
       "Citizen                              54373 non-null object\n",
       "Sex                                  54378 non-null object\n",
-      "RES                                  44400 non-null object\n",
+      "RES                                  54377 non-null object\n",
       "Class Rank                           7530 non-null float64\n",
       "Class Size                           7529 non-null float64\n",
       "Class Percentile                     6903 non-null float64\n",
@@ -2183,14 +2183,13 @@
       "ADMT_DESC                            9977 non-null object\n",
       "COMP                                 9977 non-null object\n",
       "APP_ENTRY_TERM                       9977 non-null float64\n",
-      "RESIDENT_CODE                        9977 non-null object\n",
       "ENROLL                               0 non-null float64\n",
       "JESUIT                               512 non-null object\n",
       "HSNATION                             228 non-null object\n",
       "RELIGION                             9166 non-null object\n",
       "APPLIED                              9977 non-null object\n",
-      "dtypes: float64(21), int64(1), object(36)\n",
-      "memory usage: 24.5+ MB\n"
+      "dtypes: float64(21), int64(1), object(35)\n",
+      "memory usage: 24.1+ MB\n"
      ]
     }
    ],
@@ -2201,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2210,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2245,11 +2244,11 @@
        "      <th>Major Description</th>\n",
        "      <th>First_GEN</th>\n",
        "      <th>...</th>\n",
+       "      <th>Ethnicity Code</th>\n",
        "      <th>ADMIT_TYPE</th>\n",
        "      <th>ADMT_DESC</th>\n",
        "      <th>COMP</th>\n",
        "      <th>APP_ENTRY_TERM</th>\n",
-       "      <th>RESIDENT_CODE</th>\n",
        "      <th>ENROLL</th>\n",
        "      <th>JESUIT</th>\n",
        "      <th>HSNATION</th>\n",
@@ -2380,7 +2379,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 58 columns</p>\n",
+       "<p>5 rows × 57 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2398,12 +2397,12 @@
        "3           Undeclared           Undeclared           Undeclared         N   \n",
        "4           Management           Management           Management        34   \n",
        "\n",
-       "    ...    ADMIT_TYPE  ADMT_DESC COMP APP_ENTRY_TERM RESIDENT_CODE ENROLL  \\\n",
-       "0   ...           NaN        NaN  NaN            NaN           NaN    NaN   \n",
-       "1   ...           NaN        NaN  NaN            NaN           NaN    NaN   \n",
-       "2   ...           NaN        NaN  NaN            NaN           NaN    NaN   \n",
-       "3   ...           NaN        NaN  NaN            NaN           NaN    NaN   \n",
-       "4   ...           NaN        NaN  NaN            NaN           NaN    NaN   \n",
+       "    ...    Ethnicity Code  ADMIT_TYPE ADMT_DESC COMP APP_ENTRY_TERM ENROLL  \\\n",
+       "0   ...               NaN         NaN       NaN  NaN            NaN    NaN   \n",
+       "1   ...               NaN         NaN       NaN  NaN            NaN    NaN   \n",
+       "2   ...               NaN         NaN       NaN  NaN            NaN    NaN   \n",
+       "3   ...               NaN         NaN       NaN  NaN            NaN    NaN   \n",
+       "4   ...               NaN         NaN       NaN  NaN            NaN    NaN   \n",
        "\n",
        "  JESUIT HSNATION RELIGION APPLIED  \n",
        "0    NaN      NaN      NaN     NaN  \n",
@@ -2412,10 +2411,10 @@
        "3    NaN      NaN      NaN     NaN  \n",
        "4    NaN      NaN      NaN     NaN  \n",
        "\n",
-       "[5 rows x 58 columns]"
+       "[5 rows x 57 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2427,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2436,7 +2435,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 54378 entries, 0 to 54377\n",
-      "Data columns (total 58 columns):\n",
+      "Data columns (total 57 columns):\n",
       "ID                                   54378 non-null int64\n",
       "Accept                               20440 non-null object\n",
       "HSCity                               54216 non-null object\n",
@@ -2457,7 +2456,7 @@
       "CONF                                 5174 non-null object\n",
       "Citizen                              54373 non-null object\n",
       "Sex                                  54378 non-null object\n",
-      "RES                                  44400 non-null object\n",
+      "RES                                  54377 non-null object\n",
       "Class Rank                           7530 non-null float64\n",
       "Class Size                           7529 non-null float64\n",
       "Class Percentile                     6903 non-null float64\n",
@@ -2489,14 +2488,13 @@
       "ADMT_DESC                            9977 non-null object\n",
       "COMP                                 9977 non-null object\n",
       "APP_ENTRY_TERM                       9977 non-null float64\n",
-      "RESIDENT_CODE                        9977 non-null object\n",
       "ENROLL                               0 non-null float64\n",
       "JESUIT                               512 non-null object\n",
       "HSNATION                             228 non-null object\n",
       "RELIGION                             9166 non-null object\n",
       "APPLIED                              9977 non-null object\n",
-      "dtypes: float64(21), int64(1), object(36)\n",
-      "memory usage: 24.1+ MB\n"
+      "dtypes: float64(21), int64(1), object(35)\n",
+      "memory usage: 23.6+ MB\n"
      ]
     }
    ],
