--- a/sw_random_forest_tt.ipynb
+++ b/sw_random_forest_tt.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random Forest Modeling "
+    "### Random Forest Modeling using Train-Test-Split"
    ]
   },
   {
@@ -215,35 +215,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random Forest Y1 (ACCP)"
+    "### Target Y1 (ACCP)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "fit() missing 1 required positional argument: 'y'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-1f1f187cec2f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Train Decision Tree Classifer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mrfy1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_resample\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_train_resample\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Predict the target for the test data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: fit() missing 1 required positional argument: 'y'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# build decision tree \n",
     "rfy1 = RandomForestClassifier(n_estimators=100, random_state=2019)\n",
     "\n",
     "# Train Decision Tree Classifer\n",
-    "rfy1 = RandomForestClassifier.fit(X_train_resample, Y_train_resample)\n",
+    "rfy1 = rfy1.fit(X_train_resample, Y_train_resample)\n",
     "\n",
     "# Predict the target for the test data \n",
-    "Y_pred = RandomForestClassifier.predict(X_test)"
+    "Y_pred = rfy1.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: 0.9371593942103368\n",
+      "AUC Score: 0.9341124108633746\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.92      0.91      5612\n",
+      "           1       0.96      0.94      0.95     10224\n",
+      "\n",
+      "    accuracy                           0.94     15836\n",
+      "   macro avg       0.93      0.93      0.93     15836\n",
+      "weighted avg       0.94      0.94      0.94     15836\n",
+      "\n",
+      "[[5187  425]\n",
+      " [ 573 9651]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model Accuracy, how often is the Decision Tree correct?\n",
+    "print(\"F1 Score:\",metrics.f1_score(Y_test, Y_pred, average='weighted'))\n",
+    "print(\"AUC Score:\",metrics.roc_auc_score(Y_test, Y_pred, average='weighted'))\n",
+    "\n",
+    "# We are going to look at the classification report and also the confusion matrix for the Decision Tree  \n",
+    "print(metrics.classification_report(Y_test, Y_pred))\n",
+    "print(metrics.confusion_matrix(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Target Y2 (CONF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting up our data into features and target\n",
+    "# for this modeling approach I will only be using 1 target at a time \n",
+    "# the first target will be Accept (ACCP)\n",
+    "X = df.iloc[:, :-2] # Features\n",
+    "Y = df.Y2 # Target\n",
+    "\n",
+    "# Split dataset into training set and test set using a 70/30 split\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=2019)\n",
+    "\n",
+    "# import the RandomOverSampler package from imblearn\n",
+    "# this package will help address the imbalanced nature of the ACCP target \n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "# define the RandomOverSampler (ros) model\n",
+    "ros = RandomOverSampler(random_state=2019)\n",
+    "\n",
+    "# fit the training data only to the RandomOverSampler model\n",
+    "X_train_resample, Y_train_resample = ros.fit_resample(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build decision tree \n",
+    "rfy2 = RandomForestClassifier(n_estimators=100, random_state=2019)\n",
+    "\n",
+    "# Train Decision Tree Classifer\n",
+    "rfy2 = rfy2.fit(X_train_resample, Y_train_resample)\n",
+    "\n",
+    "# Predict the target for the test data \n",
+    "Y_pred = rfy2.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: 0.8537552685252987\n",
+      "AUC Score: 0.5304778812623758\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.95      0.93     14304\n",
+      "           1       0.20      0.11      0.14      1532\n",
+      "\n",
+      "    accuracy                           0.87     15836\n",
+      "   macro avg       0.55      0.53      0.53     15836\n",
+      "weighted avg       0.84      0.87      0.85     15836\n",
+      "\n",
+      "[[13626   678]\n",
+      " [ 1366   166]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model Accuracy, how often is the Decision Tree correct?\n",
+    "print(\"F1 Score:\",metrics.f1_score(Y_test, Y_pred, average='weighted'))\n",
+    "print(\"AUC Score:\",metrics.roc_auc_score(Y_test, Y_pred, average='weighted'))\n",
+    "\n",
+    "# We are going to look at the classification report and also the confusion matrix for the Decision Tree  \n",
+    "print(metrics.classification_report(Y_test, Y_pred))\n",
+    "print(metrics.confusion_matrix(Y_test, Y_pred))"
    ]
   },
   {
