updated sw modeling

--- a/multiclass_modeling_tt.ipynb
+++ b/multiclass_modeling_tt.ipynb
@@ -590,7 +590,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. XGBoost"
+    "### 3. KNeighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the svm model \n",
+    "kn = KNeighborsClassifier()\n",
+    "\n",
+    "# fit svm model \n",
+    "kn = kn.fit(X_train_resample, Y_train_resample)\n",
+    "\n",
+    "# predict the target using the testing data \n",
+    "Y_pred = kn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model Accuracy, how often is the Decision Tree correct?\n",
+    "print(\"F1 Score:\",metrics.f1_score(Y_test, Y_pred, average='weighted'))\n",
+    "\n",
+    "# We are going to look at the classification report and also the confusion matrix for the Decision Tree  \n",
+    "print(metrics.classification_report(Y_test, Y_pred))\n",
+    "print(metrics.confusion_matrix(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. AdaBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the svm model \n",
+    "ada = AdaBoostClassifier(random_state=2019)\n",
+    "\n",
+    "# fit svm model \n",
+    "ada = ada.fit(X_train_resample, Y_train_resample)\n",
+    "\n",
+    "# predict the target using the testing data \n",
+    "Y_pred = ada.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model Accuracy, how often is the Decision Tree correct?\n",
+    "print(\"F1 Score:\",metrics.f1_score(Y_test, Y_pred, average='weighted'))\n",
+    "\n",
+    "# We are going to look at the classification report and also the confusion matrix for the Decision Tree  \n",
+    "print(metrics.classification_report(Y_test, Y_pred))\n",
+    "print(metrics.confusion_matrix(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. XGBoost"
    ]
   },
   {
@@ -660,7 +734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Random Forest"
+    "## 6. Random Forest"
    ]
   },
   {
@@ -668,35 +742,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# build decision tree \n",
+    "rf = RandomForestClassifier(n_estimators=100, random_state=2019)\n",
+    "\n",
+    "# Train Decision Tree Classifer\n",
+    "rf = rf.fit(X_train_resample, Y_train_resample)\n",
+    "\n",
+    "# Predict the target for the test data \n",
+    "Y_pred = rf.predict(X_test)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Model Accuracy, how often is the Decision Tree correct?\n",
+    "print(\"F1 Score:\",metrics.f1_score(Y_test, Y_pred, average='weighted'))\n",
+    "\n",
+    "# We are going to look at the classification report and also the confusion matrix for the Decision Tree  \n",
+    "print(metrics.classification_report(Y_test, Y_pred))\n",
+    "print(metrics.confusion_matrix(Y_test, Y_pred))"
+   ]
   },
   {
    "cell_type": "code",
